Changed default tag colours

--- a/templates/vue-dewars.html
+++ b/templates/vue-dewars.html
@@ -99,11 +99,11 @@
       <div class="column is-3" v-for="dewar, rack in rack_locations">
         <div class="box has-background-white-ter" v-on:click="onClearLocation(rack)" v-bind:class="{'has-text-danger': dewar.needsLN2}">
           <span class="has-text-weight-bold">[[rack]]: </span>
-          <span v-if="dewar.barcode" class="content">[[dewar.barcode]]</span>
+          <span v-if="dewar.barcode" class="content has-text-weight-bold">[[dewar.barcode]]</span>
           <span v-else class="content is-invisible">empty</span>
           <!-- Tags -->
           <div>
-            <span v-if="dewar.facilityCode" class="tag is-info">[[dewar.facilityCode]]</span>
+            <span v-if="dewar.facilityCode" class="tag is-dark">[[dewar.facilityCode]]</span>
             <span v-if="dewar.status == 'dispatch-requested'" class="tag is-warning">[[dewar.status]]</span>
             <span v-if="dewar.needsLN2" class="tag is-danger">needs-refill</span>  
           </div>
