Changed default route for new versions

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,32 +22,32 @@
             <!-- Tiles layout for application links -->
             <div class="tile is-ancestor has">
                 <div class="tile is-vertical is-parent has-text-centered">
-                    <a href="/stores/vstores" class="tile notification is-child is-success">
+                    <a href="/stores/" class="tile notification is-child is-success">
                         <p class="title">Stores Dewar Management</p>
                         <p class="content">To handle dewars coming into or out of the facility</p>
                     </a>
-                    <a href="/stores/" class="tile is-child notification is-primary is-disabled">
+                    <a href="/stores/original" class="tile is-child notification is-primary is-disabled">
                         <p class="title">Original Stores Management</p>
                     </a>
                 </div>
 
                 <div class="tile is-vertical is-parent has-text-centered">
-                    <a href="/zone6/vdewars" class="tile is-child notification is-success">
+                    <a href="/zone6/" class="tile is-child notification is-success">
                         <p class="title">Zone 6 Dewar Management</p>
                         <p class="content">To handle dewars to and from beamlines</p>
                     </a>
-                    <a href="/zone6/" class="tile is-child notification is-primary">
+                    <a href="/zone6/original" class="tile is-child notification is-primary">
                         <p class="title">Original Zone 6 Dewar Management</p>
                     </a>
                 </div>
 
                 <div class="tile is-vertical is-parent has-text-centered">
-                        <a  href="/ebic/vdewars" class="tile is-child notification is-success">
+                        <a  href="/ebic/" class="tile is-child notification is-success">
                             <p class="title">EBIC Dewar Management</p>
                             <p class="content">To handle dewars to and from eBIC</p>
                         </a>
 
-                        <a href="/ebic/" class="tile is-child notification is-primary">
+                        <a href="/ebic/original" class="tile is-child notification is-primary">
                             <p class="title">Original EBIC Dewar Management</p>
                         </a>
                 </div>
