Minor text fix for index

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,12 +43,12 @@
 
                 <div class="tile is-vertical is-parent has-text-centered">
                         <a  href="/ebic/" class="tile is-child notification is-success">
-                            <p class="title">EBIC Dewar Management</p>
+                            <p class="title">eBIC Dewar Management</p>
                             <p class="content">To handle dewars to and from eBIC</p>
                         </a>
 
                         <a href="/ebic/original" class="tile is-child notification is-primary">
-                            <p class="title">Original EBIC Dewar Management</p>
+                            <p class="title">Original eBIC Dewar Management</p>
                         </a>
                 </div>
             </div>
