disabling original eBIC app from index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,9 @@
                             <p class="content">To handle dewars to and from eBIC</p>
                         </a>
 
-                        <a href="/ebic/original" class="tile is-child notification is-primary">
-                            <p class="title">Original eBIC Dewar Management</p>
+                        <!-- Disable this link as changes on server break backwards compatibility-->
+                        <a href="#" class="tile is-child notification is-dark">
+                            <p class="title" style="cursor:text;">Original eBIC Dewar Management</p>
                         </a>
                 </div>
             </div>
