Set focus to first input on clear form

--- a/templates/vue-dewars.html
+++ b/templates/vue-dewars.html
@@ -379,6 +379,8 @@
               event.preventDefault()          
               this.barcode = ''
               this.location = ''
+              // When form is cleared, set focus to the input location element
+              this.$refs.barcode.focus();
             },
 
             onClearFindForm(event) {
